general cleanup, formatting, fixing inspection issues